# ai-invention-2f6f35-curie-weiss-activation-formal-verificati

./: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  convert_pdf.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  build_partial_output.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/experiment-2/: README.md
round-1/experiment-2/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-2/src/: .terminal_claude_agent_struct_out.json  cwa.py  full_method_out.json  gen_interim_output.py  method.py  method_out.json  mini_method_out.json  (+7 more)
round-1/experiment-3/: README.md
round-1/proof-1/: README.md
round-1/research-1/: README.md
round-2/evaluation-1/: README.md
round-2/experiment-1/: README.md
round-2/experiment-2/: README.md
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  pyproject.toml
round-2/experiment-2/src/logs/: sub_a_results.json  sub_b_traces.json  sub_c_traces.json
round-2/proof-1/: README.md
round-3/experiment-1/: README.md
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  pyproject.toml
round-3/proof-1/: README.md
round-4/evaluation-1/: README.md
round-4/experiment-1/: README.md
round-5/evaluation-1/: README.md
round-5/experiment-1/: README.md
round-5/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  pyproject.toml
(+234 files in other folders)
