[project]
name = "cwa-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0+cu124",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "psutil==7.2.2",
    "triton==3.2.0",
    "filelock==3.29.0",
    "sympy==1.13.1",
    "jinja2==3.1.6",
    "fsspec==2026.4.0",
    "networkx==3.6.1",
    "mpmath==1.3.0",
    "setuptools==70.2.0",
    "typing-extensions==4.15.0",
    "markupsafe==3.0.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
triton = [{ index = "pytorch-cu124" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
